sql/src/test/resources/drill/window/queries/negative/q26.res
0\t
VALIDATION ERROR
.*Expression 'a2' is not being grouped
